Fixed bg issues and blurred

--- a/website/static/website/styles.css
+++ b/website/static/website/styles.css
@@ -27,3 +27,31 @@
     background-color: #e2babf;
     color: black;
   }
+
+  .bg-img {
+    background: url('../images/mtnbg.jpg');
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size:cover;
+    -webkit-filter: blur(5px);
+    -moz-filter: blur(5px);
+    -o-filter: blur(5px);
+    -ms-filter: blur(5px);
+    filter: blur(5px);
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    top: 0px;
+    left: 0px;
+    z-index: -1;
+  }
+
+  #boxone {
+    background-color: aliceblue;
+    position: relative;
+    text-align: center;
+    width: 50%;
+    padding: 20px;
+    z-index: 5;
+  }
